force-app/main/default/objects/Child_Relationship__c/Child_Relationship__c.object-meta.xml
<CustomObject>
    <description>Junction object implemented to connect children with parents automatically.</description>
    <label>Child Relationship</label>
    <nameField>
        <displayFormat>CREL-{000000}</displayFormat>
        <label>Children Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>