force-app/main/default/objects/Child_Relationship__c/fields/Child_Relation_Confirmed_by_Individual__c.field-meta.xml
<CustomField>
    <fullName>Child_Relation_Confirmed_by_Individual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed by Individual</label>
    <type>Checkbox</type>
</CustomField>