force-app/main/default/objects/Child_Relationship__c/fields/Children__c.field-meta.xml
<CustomField>
    <fullName>Children__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Children</label>
    <referenceTo>Children__c</referenceTo>
    <relationshipLabel>Child Relationships</relationshipLabel>
    <relationshipName>Child_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>