force-app/main/default/objects/Child_Relationship__c/fields/Constituent__c.field-meta.xml
<CustomField>
    <fullName>Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Child Relationships</relationshipLabel>
    <relationshipName>Child_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>