force-app/main/default/objects/Child_Relationship__c/fields/Copy_to_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Copy_to_Spouse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used in a Flow that copies children to spouse.</description>
    <label>Copy to Spouse</label>
    <type>Checkbox</type>
</CustomField>