force-app/main/default/objects/Child_Relationship__c/fields/Relationship__c.field-meta.xml
<CustomField>
    <fullName>Relationship__c</fullName>
    <label>Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
                <default>true</default>
                <label>Parent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>